--- a/font-awesome.css
+++ b/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('https://rawcdn.githack.com/TULAJOSE/intricate-web/fef01d4e66ad99c05f1fca5f1c52d97cecc35750/fontawesome-webfont.eot?v=4.7.0');
+  src: url('https://rawcdn.githack.com/TULAJOSE/intricate-web/fef01d4e66ad99c05f1fca5f1c52d97cecc35750/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://rawcdn.githack.com/TULAJOSE/intricate-web/fef01d4e66ad99c05f1fca5f1c52d97cecc35750/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://rawcdn.githack.com/TULAJOSE/intricate-web/fef01d4e66ad99c05f1fca5f1c52d97cecc35750/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://rawcdn.githack.com/TULAJOSE/intricate-web/fef01d4e66ad99c05f1fca5f1c52d97cecc35750/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://rawcdn.githack.com/TULAJOSE/intricate-web/fef01d4e66ad99c05f1fca5f1c52d97cecc35750/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
